# vibetalking

./: .gitignore  LICENSE  README.en.md  README.md  transcribe.py
.github/workflows/: release.yml
app/: package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: popover.html  popover.ts  settings.html  settings.ts  style.css
app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: config.rs  history.rs  inject.rs  lib.rs  main.rs  recorder.rs  settings.rs  transcribe.rs
app/src-tauri/src/hotkey/: macos.rs  mod.rs  windows.rs
old/: Package.swift  build.sh
old/Resources/: Info.plist
old/Sources/Voice2Text/: Config.swift  HistoryStore.swift  HistoryView.swift  HotkeyMonitor.swift  Recorder.swift  SettingsView.swift  TextInjector.swift  Transcriber.swift  main.swift
